[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/Player/Player_v2.gd" type="Script" id=1]
[ext_resource path="res://Art Assets/Dummy-Animations/dummy-walk-cycle1.png" type="Texture" id=2]
[ext_resource path="res://Art Assets/Dummy-Animations/dummy-walk-cycle2.png" type="Texture" id=3]
[ext_resource path="res://Art Assets/Dummy-Animations/dummy-walk-cycle3.png" type="Texture" id=4]
[ext_resource path="res://Art Assets/Dummy-Animations/dummy-walk-cycle4.png" type="Texture" id=5]
[ext_resource path="res://Art Assets/Dummy-Animations/dummy-walk-cycle5.png" type="Texture" id=6]
[ext_resource path="res://Art Assets/Dummy-Animations/dummy-walk-cycle6.png" type="Texture" id=7]
[ext_resource path="res://Art Assets/Dummy-Animations/dummy-walk-cycle7.png" type="Texture" id=8]
[ext_resource path="res://Art Assets/Dummy-Animations/dummy-walk-cycle8.png" type="Texture" id=9]
[ext_resource path="res://Art Assets/Dummy-Animations/dummy-character.png" type="Texture" id=10]
[ext_resource path="res://Art Assets/Dummy-Animations/dummy-jump2.png" type="Texture" id=11]
[ext_resource path="res://Art Assets/Dummy-Animations/dummy-jump3.png" type="Texture" id=12]
[ext_resource path="res://Art Assets/Dummy-Animations/dummy-jump4.png" type="Texture" id=13]
[ext_resource path="res://Art Assets/Dummy-Animations/dummy-jump5.png" type="Texture" id=14]
[ext_resource path="res://Scripts/Player/States/move_states/Idle.gd" type="Script" id=15]
[ext_resource path="res://Scripts/Player/States/move_states/Move.gd" type="Script" id=16]
[ext_resource path="res://Scripts/Player/States/move_states/Jump.gd" type="Script" id=17]
[ext_resource path="res://Scripts/Player/States/move_states/Fall.gd" type="Script" id=18]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Move",
"speed": 15.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": false,
"name": "Fall",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]

custom_solver_bias = 0.0
radius = 4.0
height = 20.0

[node name="Player_v2" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "collision" ]
health = 1
gravity = 10
acceleration = 20
maxSpeed = 200
jumpHeight = 250

[node name="Player_Anim" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 2 )
animation = "Idle"

[node name="Hitbox" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, 2 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="States" type="Node" parent="." index="2"]

[node name="Idle" type="Node" parent="States" index="0"]

script = ExtResource( 15 )

[node name="Move" type="Node" parent="States" index="1"]

script = ExtResource( 16 )

[node name="Jump" type="Node" parent="States" index="2"]

script = ExtResource( 17 )

[node name="Fall" type="Node" parent="States" index="3"]

script = ExtResource( 18 )

[node name="front_ray" type="RayCast2D" parent="." index="3"]

position = Vector2( 3, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 17 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="back_ray" type="RayCast2D" parent="." index="4"]

position = Vector2( -3, 0 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 17 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}


